Document the new transforms and the remote COPC crop pushdown